[package]
name = "kernel"
version = "0.12.0"
authors = ["Maxim Sokhatskyi <maxim@synrc.com>"]
license = "MIT"
repository = "https://github.com/AlgoTradingHub/kernel"
homepage = "https://github.com/AlgoTradingHub/kernel"
documentation = "http://5ht.co/kernel.htm"
description = """
Abstract Reactive Streams
"""
build = "build.rs"

[[bin]]
name = "mio"
path = "src/apps/mio.rs"

[[bin]]
name = "pb"
path = "src/apps/publisher_bench.rs"

[[bin]]
name = "client"
path = "src/apps/client.rs"

[[bin]]
name = "server"
path = "src/apps/server.rs"

[[bin]]
name = "console"
path = "src/apps/console.rs"

[[bin]]
name = "streams"
path = "src/apps/iter_stream.rs"

[[bin]]
name = "onion"
path = "src/apps/protocols/onion.rs"

[dependencies]
net2         = "0.2.19"
log          = "0.3"
rand         = "0.3.14"
bitflags     = "0.4"
num          = "0.1.36"
byteorder    = "0.5.3"
lalrpop-util = "0.12.0"
num_cpus     = "1.0"
deque        = "0.3.1"
time         = "0.1.35"
fnv          = "1.0.5"
env_logger   = "0.3.5"
http-muncher = "0.3"
sha1 = "0.2.0"
rustc-serialize = "0.3.22"

[target.'cfg(unix)'.dependencies]
nix          = "0.6.0"
libc         = "0.2.14"

[build-dependencies]
lalrpop = "0.12.0"

[profile.release]
lto = false
debug = true
