[package]
name = "kernel"
version = "0.12.0"
authors = ["Maxim Sokhatskyi <maxim@synrc.com>"]
license = "MIT"
repository = "https://github.com/AlgoTradingHub/kernel"
homepage = "https://github.com/AlgoTradingHub/kernel"
documentation = "http://5ht.co/kernel.htm"
description = """
Abstract Reactive Streams
"""
build = "build.rs"

[[bin]]
name = "o"
path = "src/apps/host.rs"


[dependencies]
net2            = "0.2.19"
log             = "0.3"
bitflags        = "0.4"
lalrpop-util    = "0.12.0"
time            = "0.1.35"
env_logger      = "0.3.5"
http-muncher    = "0.3"
sha1            = "0.2.0"
rustc-serialize = "0.3.22"

[target.'cfg(unix)'.dependencies]
nix          = "0.6.0"
libc         = "0.2.14"

[build-dependencies]
lalrpop = "0.12.0"

[profile.release]
lto = false
debug = true
